src/components/Content.css
/* ... */
@media only screen and (max-width: 800px) {

    .main-footer p {
        font-size: 25px;
    }

    .left-section {
        display: none;
    }

    .right-section {
        display: none;
    }

    .middle-section {
        display: flex;
        width: 90vw;
    }

    .projects-summary {
        width: 100%;
    }

    .images-section {
        width: 90vw;
        display: flex;
        justify-content: center;
        align-items: center;
        height: 200px;
        margin-left: 0;
    }

    .description-text {
        font-size: 15px;
    }

    .about-text span {
        width: 80vw;
    }

    .about-description {
        display: flex;
        justify-content: center;
    }

    .about-logo {
        position: absolute;
        width: 100%;
        opacity: 0.3;
        top: 175vh;
    }

    .about-icons {
        font-size: 15px;
    }

    .home-icon {
        width: 50px;
        height: 50px;
    }

    .contact-btn {
        font-size: 15px;
        padding: 10px;
    }

    .contact-icons {
        flex-direction: column;
    }

    .social-icons {
        top: 10px;
        height: fit-content;
    }

    .contact-form {
        flex-direction: column;
        z-index: 200;
    }

    .info-box input {
        width: 300px;
        margin: 0 auto;
        margin-top: 20px;
    }

    .msg-box textarea {
        width: 300px;
        height: fit-content;
        margin-top: 20px;
        margin-bottom: 20px;
        margin-left: -5px;
    }

    .msg-box {
        margin: 0 auto;
    }

    .send-msg {
        font-size: 15px;
        position: relative;
        top: -20px;
    }

    .send-msg:active {
        font-size: 13px;
    }

}

@media only screen and (max-width: 480px) {

    .contact-text p {
        font-size: 30px;
        margin: 0;
    }

    .main-footer p {
        font-size: 15px;
    }

    .about-text span {
        width: 100vw;
        left: 0;
    }

    .about-section {
        height: 65vh;

    }

    .images-section {
        width: 100vw;
    }

    .projects-summary {
        padding: 0;
    }

    .middle-section span {
        padding-left: 20px;
    }

    .description {
        padding-left: 10px;
    }

    .images-section div {
        position: relative;
        width: 100px;
        height: 50px;
    }

    .renovation-display {
        position: absolute;
        left: 0;
        top: -10px;
        padding: 0;
    }

    .construction-display {
        position: absolute;
        left: 0;
        top: -10px;
        padding: 0;
    }

    .houses-display {
        position: absolute;
        height: 100px !important;
        left: 0;
        top: -50px;
        padding: 0;
    }

    .projects-section {
        height: fit-content;
    }

    .description-text {
        font-size: 12px;
    }

    .about-icons {
        flex-direction: column;
        height: 65vh;
    }

    .covering-div {
        font-size: 20px;
    }

    .carousel-container {
        padding: 0;
    }

    .carousel-container div {
        width: 75px;
        height: 75px;
    }
}

